--- a/mediosdepago.html
+++ b/mediosdepago.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medios de pago | Days of play | Juegos PS4 digitales</title>
-    <meta name="description"
-    content="Conoce los medios de pago que trabajamos para que realices tu compra">
-<meta name="keywords"
-    content="comprar juegos de ps4, como pagar, medios de pago, tarjetas de crédito, payments methods">
+    <meta name="description" content="Conoce los medios de pago que trabajamos para que realices tu compra">
+    <meta name="keywords"
+        content="comprar juegos de ps4, como pagar, medios de pago, tarjetas de crédito, payments methods">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <!-- CSS only -->
@@ -37,22 +36,22 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="logo">
-              </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="juegosdeps4.html">Juegos PS4</a>
-                    <a class="nav-item nav-link active" href="mediosdepago.html">Medios de pago</a>
-                    <a class="nav-item nav-link" href="preguntasfrecuentes.html">Preguntas frecuentes</a>
-                    <a class="nav-item nav-link" href="contactanos.html">Contáctanos</a>
+                    <img src="images/logo.png" alt="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="juegosdeps4.html">Juegos PS4</a>
+                        <a class="nav-item nav-link active" href="mediosdepago.html">Medios de pago</a>
+                        <a class="nav-item nav-link" href="preguntasfrecuentes.html">Preguntas frecuentes</a>
+                        <a class="nav-item nav-link" href="contactanos.html">Contáctanos</a>
 
+                    </div>
                 </div>
-            </div>
             </div>
 
         </nav>
@@ -61,81 +60,72 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-8">
-                <div class="maincontent">
-                    <div class="maincontent__pagos">
-                        <h3 class="h5">PAGO FÁCIL (RECARGA DE MERCADOPAGO)</h3>
-                        <p class="maincontent__text">
-                            Podes abonar en cualquier pago fácil del país con el código 0000 0000. Le decís al cajero
-                            que
-                            querés
-                            hacer una
-                            recarga de MercadoPago, le das el código y el DNI 00000. Una vez hayas pagado, envíanos una
-                            foto
-                            del
-                            ticket por
-                            WhatsApp y te enviamos los datos y las instrucciones por ahí mismo.
-                            Pagando con este método tenés un 10% de descuento.
-                        </p>
-                        <h3 class="h5">MERCADOPAGO (Pago con tarjeta de crédito o débito)</h3>
-                        <p class="maincontent__text">
-                            Con tarjeta de crédito o débito podés pagar a través de un link de pago de MercadoPago que
-                            debes
-                            pedirnos a
-                            través de WhatsApp (nuestros números de contacto están señalados en la web).
-                            Pagando con este método no hay descuento y se paga a precio de lista (precio publicado en la
-                            web).
-                            Si abonás con el saldo de tu billetera de MercadoPago es considerado cómo método de contado
-                            y
-                            tenés
-                            un
-                            10% de
-                            descuento. Enviar el monto del juego en pagos separados de no más de $1000, ya que
-                            MercadoPago
-                            cobra
-                            impuestos
-                            por "ingresos brutos" de lo contrario. Por ejemplo, si queremos comprar un juego que vale
-                            $2350,
-                            enviar
-                            2 pagos
-                            de $1000 y uno de $350 (Sólo enviando el pago de ésta forma, tenés el 10% de descuento).
-                        </p>
 
-                        <h3 class="h5"> TRASFERENCIA BANCARIA (Brubank y Ualá) </h3>
-                        <ol class="maincontent__text">
-                            <li>Brubank</li>
-                            <li>
-                                <ul>
-                                    <li>Titular: xxxxx</li>
-                                    <li>CUIT/CUIL: 00-0000000-00</li>
-                                    <li>Alias: lxxxxxxx</li>
-                                    <li>CBU: 0000000000-000</li>
-                                </ul>
-                            </li>
-                            <li>Uala</li>
-                            <li>
-                                <ul>
-                                    <li>Titular: xxxxx</li>
-                                    <li>CUIT/CUIL: 00-0000000-00</li>
-                                    <li>Alias: lxxxxxxx</li>
-                                    <li>CBU: 0000000000-000</li>
-                                </ul>
-                            </li>
+                <div class="maincontent__pagos">
+                    <h3 class="h5">PAGO FÁCIL (RECARGA DE MERCADOPAGO)</h3>
+                    <p class="maincontent__text">
+                        Podes abonar en cualquier pago fácil del país con el código 0000 0000. Le decís al cajero
+                        que
+                        querés
+                        hacer una
+                        recarga de MercadoPago, le das el código y el DNI 00000. Una vez hayas pagado, envíanos una
+                        foto
+                        del
+                        ticket por
+                        WhatsApp y te enviamos los datos y las instrucciones por ahí mismo.
+                        Pagando con este método tenés un 10% de descuento.
+                    </p>
+                    <h3 class="h5">MERCADOPAGO (Pago con tarjeta de crédito o débito)</h3>
+                    <p class="maincontent__text">
+                        Con tarjeta de crédito o débito podés pagar a través de un link de pago de MercadoPago que
+                        debes
+                        pedirnos a
+                        través de WhatsApp (nuestros números de contacto están señalados en la web).
+                        Pagando con este método no hay descuento y se paga a precio de lista (precio publicado en la
+                        web).
+                        Si abonás con el saldo de tu billetera de MercadoPago es considerado cómo método de contado
+                        y
+                        tenés
+                        un
+                        10% de
+                        descuento. Enviar el monto del juego en pagos separados de no más de $1000, ya que
+                        MercadoPago
+                        cobra
+                        impuestos
+                        por "ingresos brutos" de lo contrario. Por ejemplo, si queremos comprar un juego que vale
+                        $2350,
+                        enviar
+                        2 pagos
+                        de $1000 y uno de $350 (Sólo enviando el pago de ésta forma, tenés el 10% de descuento).
+                    </p>
 
-                        </ol>
-                    </div>
-                    <div class="asidearea">
-                        <p class="maincontent__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, at natus totam enim quaerat
-                            iusto
-                            quisquam velit nostrum. Quia, non hic? Possimus commodi hic alias vero quasi dolorum
-                            delectus
-                            tenetur.
-                        </p>
-                    </div>
+                    <h3 class="h5"> TRASFERENCIA BANCARIA (Brubank y Ualá) </h3>
+                    <ol class="maincontent__text">
+                        <li>Brubank</li>
+                        <li>
+                            <ul>
+                                <li>Titular: xxxxx</li>
+                                <li>CUIT/CUIL: 00-0000000-00</li>
+                                <li>Alias: lxxxxxxx</li>
+                                <li>CBU: 0000000000-000</li>
+                            </ul>
+                        </li>
+                        <li>Uala</li>
+                        <li>
+                            <ul>
+                                <li>Titular: xxxxx</li>
+                                <li>CUIT/CUIL: 00-0000000-00</li>
+                                <li>Alias: lxxxxxxx</li>
+                                <li>CBU: 0000000000-000</li>
+                            </ul>
+                        </li>
+
+                    </ol>
                 </div>
             </div>
         </div>
     </div>
+
     <footer class="foot">
         <!--pie-->
         <div class="susc">
